[package]
name = "musicserv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.14.0"
unix-ipc = "0.2.2"
serde = {version = "1.0", features = ["derive"]}
clap = {version = "~2.27.0", features = ["yaml"]}
nix = "0.23.1"
